--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					
 				<!-- Logo -->
 				<div id="logo" class="wrapper" style="top:50%;">
-					<h1>Guddoo Kumar <br>Gupta</h1>
+					<h1 style="size:40%">Guddoo Kumar Gupta</h1>
 					<p>My Very Own Personal Website</p>
 				</div>
 
