--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<!-- Logo -->
 				<div id="logo" class="wrapper" style="top:50%;">
 					<h1 style="size:40%">Guddoo Kumar Gupta</h1>
-					<p>My Very Own Personal Website</p>
+					<p style="size:1px">My Personal Website</p>
 				</div>
 
 			</div>
