--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</nav>
 					
 				<!-- Logo -->
-				<div id="logo" class="wrapper" style="top:50%;">
+				<div id="logo" class="wrapper">
 					<h1 style="size:40%">Guddoo Kumar Gupta</h1>
 					<p style="size:1px">My Personal Website</p>
 				</div>
