--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					
 				<!-- Logo -->
 				<div id="logo" class="wrapper">
-					<h1 style="size:40%">Guddoo Kumar Gupta</h1>
+					<h1 >Guddoo Kumar Gupta</h1>
 					<p style="size:1px">My Personal Website</p>
 				</div>
 
