--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 				</nav>
 					
 				<!-- Logo -->
-				<div id="logo" class="wrapper">
-					<h1 >Guddoo Kumar Gupta</h1>
-					<p style="size:1px">My Personal Website</p>
+				<div id="logo" class="wrapper" style="top:50%;">
+					<h1>Guddoo Kumar Gupta</h1>
+					<p>My Very Own Personal Website</p>
 				</div>
+
 
 			</div>
 		</div>
