--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				</nav>
 					
 				<!-- Logo -->
-				<div id="logo" class="wrapper" >
-					<h1>Guddoo Kumar  Gupta</h1>
+				<div id="logo" class="wrapper" style="top:50%;">
+					<p>Guddoo Kumar  Gupta</p>
 					<p>My Very Own Personal Website</p>
 				</div>
 
