--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					
 				<!-- Logo -->
 				<div id="logo" class="wrapper" style="top:50%;">
-					<p>Guddoo Kumar  Gupta</p>
+					<p style="font-size:60px">Guddoo Kumar  Gupta</p>
 					<p>My Very Own Personal Website</p>
 				</div>
 
