--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</nav>
 					
 				<!-- Logo -->
-				<div id="logo" class="wrapper" style="top:50%;">
+				<div id="logo" class="wrapper" >
 					<p style="font-size:60px">Guddoo Kumar  Gupta</p>
 					<p>My Very Own Personal Website</p>
 				</div>
