--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					
 				<!-- Logo -->
 				<div id="logo" class="wrapper" >
-					<p style="font-size:60px">Guddoo Kumar  Gupta</p>
+					<span style="font-size:60px">Guddoo Kumar  Gupta</span>
 					<p>My Very Own Personal Website</p>
 				</div>
 
