--- a/resume/index.html
+++ b/resume/index.html
@@ -152,11 +152,12 @@
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-rocket"></i></span>Skills &amp; Proficiency</h2>
 <br>
                     <ul>
-                        <li>Python</li>
                         <li>C/C++</li>
+                        <li>Data Structure</li>
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>JAVASCRIPT</li>
+                        <li>Python</li>
                         <li>MATPLOTLIB</li>
                         <li>NUMPY</li>
                     </ul>
